[package]
name = "selena"
version = "0.1.0"
edition = "2024"

[dependencies]
lexical-core = "1.0.6"
miette = { version = "7.6.0", features = ["fancy"] }
rustc-hash = "2.1.1"
thiserror = "2.0.17"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.dev] 
opt-level = 1

