[package]
name = "selena"
version = "0.1.0"
edition = "2024"

[dependencies]
lexical-core = { version = "1.0.6", features = ["std", "parse-floats"], default-features = false }
miette = { version = "7.6.0", features = ["fancy"] }
rustc-hash = { version = "2.1.1", features = ["std"] }
thiserror = "2.0.17"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.dev] 
opt-level = 1

